--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "styled-components": "^6.0.7",
     "swiper": "^9.4.1",
     "typescript": "^4.4.2",
